updated Dockerfile to use JDK17